--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/sinon": "^17.0.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
@@ -35,6 +36,7 @@
     "globals": "^15.9.0",
     "jsdom": "^25.0.0",
     "prettier": "3.3.3",
+    "sinon": "^18.0.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
